fix item--1 bottom whitespace in mobile

--- a/src/styles/components/cover.scss
+++ b/src/styles/components/cover.scss
@@ -132,7 +132,7 @@
       left: 50%;
       transform: translateX(-50%);
       width: 100%;
-      bottom: -65vw;
+      bottom: -70vw;
       color: $black;
       text-shadow: none;
       font-weight: 300;
