--- a/src/styles/components/floatingItems.scss
+++ b/src/styles/components/floatingItems.scss
@@ -56,7 +56,7 @@
     flex-direction: column;
     right: 0;
     align-items: flex-end;
-    top: 0;
+    top: 10vw;
   }
 
   .item__image-wrapper {
